--- a/analysis/nomad_plugin.yaml
+++ b/analysis/nomad_plugin.yaml
@@ -1,4 +1,4 @@
 plugin_type: schema
-name: analysis
+name: schema/analysis
 description: |
   This plugin is used to analyze parsed raw data for spectral profiles in the standard NOMAD schema.
