--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -58,4 +58,4 @@ jobs:
       - uses: actions/checkout@v3
       - uses: chartboost/ruff-action@v1
         with:
-          args: "check ."
+          args: "format . --check"
