--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,8 @@ dependencies = [
 dev = [
     "ruff>=0.2.0",
     "pytest",
-    "structlog==22.3.0"
+    "structlog==22.3.0",
+    "python-logstash",
 ]
 
 [project.urls]
