--- a/src/nomad_analysis/nomad_plugin.yaml
+++ b/src/nomad_analysis/nomad_plugin.yaml
@@ -1,4 +1,4 @@
 plugin_type: schema
 name: schemas/nomad_analysis
 description: |
-  This plugin is used to analyze parsed raw data for spectral profiles in the standard NOMAD schema.
+  This plugin is used to analyze parsed raw data from the NOMAD standard schema.
