--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -51,12 +51,12 @@ jobs:
       - uses: actions/checkout@v3
       - uses: chartboost/ruff-action@v1
         with:
-          args: "format ."
+          args: "format . --check"
   ruff-linting:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: chartboost/ruff-action@v1
         with:
-          args: "format . --check"
+          args: "check ."
           version: 0.2.0
