--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,13 @@
     "editor.rulers": [90],
     "editor.renderWhitespace": "all",
     "editor.tabSize": 4,
-    "[javascript]": {
-      "editor.tabSize": 2
+    "[python]": {
+      "editor.formatOnSave": true,
+      "editor.codeActionsOnSave": {
+        "source.fixAll": "explicit",
+        "source.organizeImports": "explicit"
+      },
+      "editor.defaultFormatter": "charliermarsh.ruff"
     },
     "files.trimTrailingWhitespace": true,
     "files.watcherExclude": {
@@ -16,9 +21,8 @@
       "**/__pycache__": true,
       "**/node_modules": true
     },
+    "python.testing.pytestEnabled": true,
     "python.testing.pytestPath": "pytest",
     "python.testing.pytestArgs": ["tests"],
     "python.testing.unittestEnabled": false,
-    "editor.defaultFormatter": "charliermarsh.ruff",
-    "editor.formatOnSave": true
 }
