--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,31 +11,36 @@ dynamic = ["version"]
 description = "A NOMAD plugin for analysis of FAIR data."
 readme = "README.md"
 authors = [
-    { name = "Sarthak Kapoor", email = "sarthak.kapoor@physik.hu-berlin.de" }
+    { name = "Sarthak Kapoor", email = "sarthakkapoor@hotmail.com" },
 ]
-license = { text = "Apache-2.0" }
+maintainers = [
+    { name = "Sarthak Kapoor", email = "sarthakkapoor@hotmail.com" },
+]
+license = { file = "LICENSE" }
 requires-python = ">=3.9"
 classifiers = [
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3 :: Only",
+    "Intended Audience :: Developers",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python",
     "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
     "License :: OSI Approved :: Apache Software License",
 ]
 dependencies = [
-    "nomad-lab>=1.2.2dev578",
+    "nomad-lab>=1.3.0",
     "nbformat>=5.9.2",
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/FAIRmat-NFDI/nomad-analysis"
-"Bug Tracker" = "https://github.com/FAIRmat-NFDI/nomad-analysis/issues"
+Repository = "https://github.com/ka-sarthak/nomad-analysis"
 "Documentation" = "https://fairmat-nfdi.github.io/nomad-analysis/"
 
 [project.optional-dependencies]
 dev = [
-    "ruff>=0.2.0",
+    "ruff",
     "pytest",
-    "structlog==22.3.0",
+    "structlog",
     "python-logstash==0.4.6",
     "mongoengine>=0.20",
     "pyjwt[crypto]==2.6.0",
@@ -46,12 +51,30 @@ dev = [
 
 [tool.ruff]
 include = ["src/nomad_analysis/*.py", "tests/*.py"]
-lint.select = [
-    "E", # pycodestyle
-    "W", # pycodestyle
-    "PL", # pylint
+
+
+# Same as Black.
+line-length = 88
+indent-width = 4
+
+
+[tool.ruff.lint]
+select = [
+    # pycodestyle
+    "E",
+    "W",
+    # Pyflakes
+    "F",
+    # pyupgrade
+    "UP",
+    # isort
+    "I",
+    # pylint
+    "PL",
 ]
-lint.ignore = [
+
+ignore = [
+    "F403", # 'from module import *' used; unable to detect undefined names
     "E501", # Line too long ({width} > {limit} characters)
     "E701", # Multiple statements on one line (colon)
     "E731", # Do not assign a lambda expression, use a def
@@ -66,14 +89,11 @@ lint.ignore = [
     "PLR1714", # consider-using-in
     "PLR5501", # else-if-used
 ]
-lint.fixable = ["ALL"]
 
-# Same as Black.
-line-length = 88
-indent-width = 4
+fixable = ["ALL"]
 
-# Assume Python 3.9
-target-version = "py39"
+# Allow unused variables when underscore-prefixed.
+dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
 # this is entirely optional, you can remove this if you wish to
 [tool.ruff.format]
@@ -89,9 +109,15 @@ skip-magic-trailing-comma = false
 # Like Black, automatically detect the appropriate line ending.
 line-ending = "auto"
 
+[tool.setuptools]
+package-dir = { "" = "src" }
 
 [tool.setuptools.packages.find]
 where = ["src"]
 
-[tool.setuptools.package-data]
-nomad_analysis = ['*/nomad_plugin.yaml']
+[tool.cruft]
+# Avoid updating workflow files, this leads to permissions issues
+skip = [".github/*"]
+
+[project.entry-points.'nomad.plugin']
+mypackage = "nomad_analysis.schema_packages:mypackage"
