--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,32 +8,30 @@ on:
     types: [published]
 
 jobs:
-  # publish-to-pypi:
-  #   name: >-
-  #     Publish distribution to PyPI
-  #   runs-on: ubuntu-latest
-  #   environment:
-  #     name: pypi
-  #     url: https://pypi.org/p/nomad-schema-plugin-example
-  #   permissions:
-  #     id-token: write # IMPORTANT: mandatory for trusted publishing
-  #
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - name: Set up Python
-  #       uses: actions/setup-python@v4
-  #       with:
-  #         python-version: "3.9"
-  #     - name: Install pypa/build
-  #       run: >-
-  #         python3 -m
-  #         pip install
-  #         build
-  #         --user
-  #     - name: Build a binary wheel and a source tarball
-  #       run: python3 -m build
-  #     - name: Publish distribution  to PyPI
-  #       uses: pypa/gh-action-pypi-publish@release/v1
+  publish-to-pypi:
+    name: >-
+      Publish distribution to PyPI
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.9"
+      - name: Install pypa/build
+        run: >-
+          python3 -m
+          pip install
+          build
+          --user
+      - name: Build a binary wheel and a source tarball
+        run: python3 -m build
+      - name: Publish distribution  to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          user: __token__
+          password: ${{ secrets.PYPI_API_TOKEN }}
 
   github-release:
     name: >-
