Add setuptools_scm table in pyproject

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -115,3 +115,5 @@ skip = [".github/*"]
 [project.entry-points.'nomad.plugin']
 general_analysis_schema = "nomad_analysis.general:schema"
 jupyter_analysis_schema = "nomad_analysis.jupyter:schema"
+
+[tool.setuptools_scm]
